--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
           
                           </ul>
                           <div class="card-action">
-                            <a aria-label="Visit " href="https://quiz-up-app.herokuapp.com/" target="_blank" data-position="top"
+                            <a aria-label="Visit " href="https://github.com/atithighimire/FaceAttendanceSystem" target="_blank" data-position="top"
                               data-tooltip="View Github"
                               class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fab fa-github	"></i></a>
                           </div>
