--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
                 <div class="column right">
                     <div class="text">I'm Atithi and I'm a <span class="typing-2"></span></div>
                     <p>I am a Computer Science Graduate Student at Montclair State University, New Jersey.
-                        I have more than 2 years of professional work experience in field of software development.
-                        Till now I have worked on multiple project using Python, AngularJs, Typescript, NodeJs, PHP, C++, MySQL, MongoDB, Google Cloud Firestore, HTML5, CSS.
-                        Curently i work as Data analyst at Montclair State University:College of Science And Mathematics,Deans Office.
-                         I believe my enthusiasm and good work ethics would make me an asset to your team.
+                        I have more than 2 years of professional work experience in the field of software development. 
+                        Till now I have worked on multiple projects using Python, AngularJs, Typescript, NodeJs, PHP, C++, MySQL, MongoDB, Google Cloud Firestore, HTML5, and CSS.
+                        Currently, I work as a Data analyst at Montclair State University: College of Science And Mathematics, Dean's Office.
+                        I believe my enthusiasm and good work ethic would make me an asset to your team.
                      
                     </p>
                 </div>
